# json-streamer

./: .gitignore  README.md  pydoc-markdown.yml  pyproject.toml
.github/workflows/: publish.yaml
json_streamer/: __init__.py  json.py  parser.py
tests/: test_json_stream.py
