[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-streamer"
version = "0.1.0"
description = "A JSON parser capable of parsing incomplete JSON strings from streams/generators."
authors = ["Almog Baku <almog.baku@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlmogBaku/json-streamer"
keywords = ["json", "stream", "partial", "generator"]

[compatibility]
python = "^3.8"

[dependencies]
# No third-party dependencies

[dev-dependencies]
pytest = "^6.2"

[scripts]
# Add any scripts or entry points if needed

[package]
include = ["*.py"]

