[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-streamer"
version = "0.0.0-dev"
description = "A JSON parser capable of parsing incomplete JSON strings from streams/generators."
authors = [{name = "Almog Baku", email = "almog.baku@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["json", "stream", "partial", "generator"]
requires-python = ">=3.8"

[project.urls]  # Optional
"Homepage" = "https://github.com/AlmogBaku/json-streamer"
"Bug Reports" = "https://github.com/AlmogBaku/json-streamer/issues"
"Source" = "https://github.com/AlmogBaku/json-streamer/"